--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -12,7 +12,10 @@
             <a class="nav-link" aria-current="page" href="#" [routerLink]="['home']">Home</a>
           </li>
           <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" href="#" [routerLink]="['heroes']">Heroes</a>
+            <a class="nav-link" href="#" [routerLink]="['personajes','heroe']">Heroes</a>
+          </li>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" href="#" [routerLink]="['personajes','villano']">Villanos</a>
           </li>
             <li class="nav-item" routerLinkActive="active">
             <a class="nav-link" href="#" [routerLink]="['about']">About</a>
