--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,5 +2,6 @@
     <div class="container-fluid py-5">
       <h1 class="display-5 fw-bold">Comic App</h1>
       <p class="col-md-8 fs-4">Esto es una app de comics</p>
+      <h3>Insert your name here</h3>
     </div>
   </div>
