--- a/src/app/components/personaje/personaje.component.html
+++ b/src/app/components/personaje/personaje.component.html
@@ -8,7 +8,7 @@
         <a [routerLink]="['/personajes',personaje.tipo]" class="btn btn-outline-danger btn-block">Regresar</a>
     </div>
     <div class="col-8">
-           <h3>{{personaje.nombre}} <small>({{personaje.tipo}})</small> </h3> 
+        <h3>{{personaje.nombre}} <small>({{personaje.tipo}})</small> {{texto | password :this.estado }} <a class="btn btn-primary btn-xs" (click)="encriptar()">{{!this.estado?"Encriptar":"Desencriptar"}}</a> </h3>
            <hr>
            <p>
                {{personaje.bio}}
